 - Game Boy support
 - Support for encrypted CodeBreaker GBA cheats
 - Emulation of Vast Fame protected GBA carts (taizou)
 - Tile viewer
Bugfixes:
 - SDL: Fix axes being mapped wrong
 - GBA Memory: Fix mirror on non-overdumped Classic NES games
 - Util: Fix realloc semantics in utf16to8
 - PSP2: Fix GPU crash while exiting
 - PSP2: Fix VSync
 - ARM7: Fix decoding of Thumb ADD (variants 5 and 6)
Misc:
 - 3DS: Use blip_add_delta_fast for a small speed improvement
 - OpenGL: Log shader compilation failure
 - Qt: Remove some C99isms from C++ code
 - Windows: Add native VDir support
 - All: Add QUIET parameter to silence CMake
 - ARM7: Support forcing Thumb mode via MSR
 - ARM7: Flush prefetch cache when loading CPSR via MSR
 - OpenGL: Add texSize uniform
 - ARM7: Clean up instruction decoding for future expandability
 - Qt: Make -g flag work in Qt build
 - Qt: Simplify OpenGL context creation
 - Debugger: Support register and memory writes via GDB stub
 - GBA Audio: Force audio DMAs to not increment destination
 - Qt: Thread startup improvements
 - 3DS: Allow UTF-16 filenames
 - 3DS: Port to using citro3D
 - 3DS: Use system font for menus
 - PSP2: Use system font for menus
 - All: Faster memory read/write
 - Qt: Make audio channel/video layer options shortcut mappable
 - GBA Memory: Optimize stalling behavior

0.4.1: (2016-07-11)
Bugfixes:
 - All: Fix several file handle leaks
 - All: Fix instruction tables getting zeroed when linking sometimes
 - ARM7: Fix flags on SBC/RSC
 - ARM7: Fix setting spsr privilege bits when spsr is empty
 - GBA Audio: Reset audio FIFO DMA if an invalid destination is set
 - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
 - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
 - GBA Memory: Fix executing code from OBJ region of VRAM
 - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
 - GBA Serialize: Fix loading savegames from savestates
 - OpenGL: Correct boolean vector strcmp strings for uniforms